# FastCEP

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  ceps.db  create_tables.py  docker-compose.yml  init_db_postgres.sh  pyproject.toml
.github/workflows/: python-app.yml
src/FastCEP/: cache.py  database.py  main.py  models.py
