[project]
name = "fastcep"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Mattes",email = "mattesfelipe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "fastcep", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
